bug fixed - lang and brightness don't overlap menu

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ span[lang=en] {
     display: none
 }
 
+.dark {
+    display: none;
+}
+
 p {
     font-size: 15px;
     line-height: 29px;
@@ -46,14 +50,6 @@ h1 {
 
 .topnav .icon {
     display: none;
-}
-
-.hide {
-    display: none;
-}
-
-.show {
-    display: block;
 }
 
 @media screen and (max-width: 620px) {
